feat(item-requests): reverting request approval includes ground work for updating item requests in the future
